[package]
name = "dcs98-confine"
version = "0.1.0"
edition = "2021"
description = "DCS98 offensive-engine egress confinement helper (WFP-on-SID jail + SYSTEM service)"
publish = false

[[bin]]
name = "dcs98-confine"
path = "src/main.rs"

[dependencies]
windows-service = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dependencies.windows]
version = "0.58"   # HOST-CONFIRM: pin to the exact latest that builds on the x86_64-pc-windows-msvc host.
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_NetworkManagement_NetManagement",
  "Win32_NetworkManagement_Ndis",
]

[profile.release]
panic = "abort"
lto = true
strip = true
